CLINE-improved  CV website changes (with Gemini 2.5)

--- a/education/index.html
+++ b/education/index.html
@@ -22,15 +22,13 @@
 
     <main class="container">
         <section class="education-content">
-            <div id="educationDetail" class="detail-container">
-                <!-- Dynamic content will be loaded here -->
+            <div class="carousel-container">
+                <button class="carousel-prev">&larr;</button>
+                <div id="education-carousel" class="carousel">
+                    <!-- Carousel items will be loaded here -->
+                </div>
+                <button class="carousel-next">&rarr;</button>
             </div>
-
-            <nav class="detail-navigation">
-                <button id="prevEducation" class="nav-button">&larr; Previous</button>
-                <a href="../" class="back-home">Back to Main Page</a>
-                <button id="nextEducation" class="nav-button">Next &rarr;</button>
-            </nav>
         </section>
     </main>
 
