Furhter CLINE refinements for generic  CV website deployment

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
 
         <section class="projects-section">
-            <h2 class="section-title" data-i18n="projects.title">Key Projects</h2>
+            <h2 class="section-title" data-i18n="projects.title">Key Projects</h2> <!-- This was already correct, my mistake in analysis -->
             <div class="carousel-container">
                 <div id="projects-carousel" class="carousel">
                     <!-- Project items will be loaded here by renderProjects -->
